# mtRNAFeat

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: test.yml
configs/: all.yaml  all_vienna.yaml  default.yaml  template.yaml
docs/: CONFIG.md  FIGURES.md  STAGES.md
examples/: 01_smoke_mini.sh  02_smoke_parallel.sh  03_real_all.sh  04_substitution_run.sh  05_single_step.sh
src/mtrnafeat/: __init__.py  cli.py  config.py  constants.py  progress.py  rng.py  validation.py
src/mtrnafeat/analysis/: cofold_sweep.py  comparative.py  cotrans.py  deviation.py  features.py  kinetic.py  landscape.py  local_probability.py  significance.py  statistics.py  substitution_thermo.py  tis.py  window.py
src/mtrnafeat/commands/: cofold.py  compare.py  doctor.py  features.py  gene_panel.py  kinetic.py  landscape.py  local_probability.py  pipeline.py  plot.py  significance.py  stats.py  structure_deviation.py  substitution.py  tis.py  validate_inputs.py  window.py
src/mtrnafeat/core/: cofold.py  manifest.py  projection.py  shuffle.py  stacking.py  stats.py  structure.py  thermo.py
src/mtrnafeat/engines/: __init__.py  _common.py  rnastructure.py
src/mtrnafeat/io/: alignment.py  annotations.py  codons.py  db_parser.py  reactivity.py  writers.py
src/mtrnafeat/viz/: cofold_plot.py  comparative_plot.py  cotrans_plot.py  features_plot.py  gene_panel.py  kinetic_plot.py  landscape_plot.py  local_probability_plot.py  significance_plot.py  stats_plot.py  structure_deviation.py  style.py  substitution_plot.py  tis_plot.py  window_plot.py
tests/: conftest.py  test_analysis.py  test_cli_smoke.py  test_core.py  test_determinism.py  test_deviation.py  test_doctor.py  test_engines_rnastructure.py  test_io.py  test_local_probability.py  test_manifest.py  test_stats.py  test_validate_inputs.py
tests/fixtures/: bad_brackets.db  bad_length.db
